# promptrepo

./: .env.example  .gitignore  Agent.md  CONTRIBUTING.md  LICENSE  README.md  SHARE_CHAT_FEATURE_PLAN.md  TODO.md  Taskfile.yml  agent.md  docker-compose.dev.yml  main.py  package-lock.json  package.json  pricing.json  pyproject.toml  requirements.txt  rxconfig.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  main.py  main_example_best_practices.py  pyproject.toml  requirements.txt  settings.py  test_main.py  test_zai_manual.py  tool.py
backend/agents/chat_agent/: chat_agent.py
backend/agents/promptimizer/: __init__.py  promptimizer_agent.py
backend/api/: deps.py
backend/api/v0/: auth.py  health.py  info.py  llm.py  repos.py
backend/api/v1/: auth.py
backend/database/: __init__.py  core.py  database_adapter.py  database_factory.py
backend/database/daos/: oauth_state.py
backend/database/migrations/: env.py
backend/database/models/: __init__.py  oauth_state.py  shared_chats.py  user.py  user_llm_configs.py  user_repos.py  user_sessions.py
backend/docs/: ANY_LLM_WRAPPER.md  oauth_service_design.md
backend/lib/any_llm/: __init__.py  any_llm_adapter.py  litellm_provider.py  synthetics_new_provider.py  zai_provider.py
backend/lib/deepeval/: __init__.py  custom_llm.py  deepeval_adapter.py  metric_config.py  models.py
backend/middleware/: __init__.py  auth_middleware.py
backend/middlewares/: __init__.py  auth_middleware.py  context_middleware.py
backend/middlewares/rest/: __init__.py  dependencies.py  exceptions.py  handlers.py  middleware.py  models.py  responses.py  setup.py  utils.py
backend/migrations/: env.py
backend/migrations/versions/: 09b84645c955_create_initial_tables.py
backend/models/: __init__.py  database.py  user.py  user_llm_configs.py  user_repos.py  user_sessions.py
backend/schemas/: README.md  __init__.py  artifact_type_enum.py  chat.py  config.py  hosting_type_enum.py  messages.py  oauth_provider_enum.py  providers.py  shared_chat.py  user_repos.py
backend/services/: __init__.py  completion_service.py  config_service.py  github_service.py  provider_service.py  repo_locator_service.py  repo_service.py  session_service.py  user_repos_service.py  user_service.py
backend/services/artifacts/: artifact_meta_interface.py
backend/services/auth/: __init__.py  auth_service.py  models.py  session_service.py
backend/services/config/: DESIGN.md  __init__.py  config_base.py  config_factory.py  config_interface.py  config_service.py  factory.py  individual_strategy.py  models.py  multi_tenant_strategy.py  organization_strategy.py
backend/services/conversational/: __init__.py  conversation_simulator_service.py  models.py
backend/services/evals/: __init__.py  eval_execution_service.py  eval_meta_service.py  models.py
backend/services/file_operations/: __init__.py  file_operations_service.py
backend/services/git/: __init__.py  git_service.py  models.py
backend/services/git_provider/: __init__.py  models.py  (+4 more)
backend/settings/: .env.example  admin.py  auth.py  base_settings.py  hosting.py  llm.py  repo.py  settings.py
backend/tests/: __init__.py  conftest.py
backend/utils/: auth_utils.py  constants.py  cookie.py  repo_utils.py  security.py
(+823 files in other folders)
