[project]
name = "promptrepo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "any-llm-sdk[all]>=0.13.1",
    "boto3>=1.40.11",
    "dotenv>=0.9.9",
    "gitpython>=3.1.45",
    "httpx>=0.28.1",
    "openai>=1.99.9",
    "pygithub>=2.7.0",
    "python-dotenv==1.1.1",
    "pyyaml>=6.0.2",
    "reflex==0.8.4",
    "reflex-chakra>=0.8.2.post1",
    "ruamel-yaml>=0.18.14",
]
